layout issues fixed in token management

--- a/public/assets/scss/core/withdraw.scss
+++ b/public/assets/scss/core/withdraw.scss
@@ -691,5 +691,6 @@
     margin-top: 15px;
     border-top: 1px solid #EAEAE8;
     padding-top: 20px;
+    text-align: center;
 }
 /** Popup style end **/
